--- a/snippets/card-product-no-price.liquid
+++ b/snippets/card-product-no-price.liquid
@@ -15,7 +15,7 @@ TTT 4-17-22 card with hide price for products in collage
     {% render 'card-product', show_vendor: section.settings.show_vendor %}
 {% endcomment %}
 
-{{ 'component-rating.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" data-href="{{ 'component-rating.css' | asset_url }}">
 
 {%- if card_product and card_product != empty -%}
   {%- liquid
