--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -1,9 +1,9 @@
-{{ 'section-main-product.css' | asset_url | stylesheet_tag }}
-{{ 'section-featured-product.css' | asset_url | stylesheet_tag }}
-{{ 'component-accordion.css' | asset_url | stylesheet_tag }}
-{{ 'component-price.css' | asset_url | stylesheet_tag }}
-{{ 'component-rte.css' | asset_url | stylesheet_tag }}
-{{ 'component-loading-overlay.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" data-href="{{ 'section-main-product.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'section-featured-product.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-accordion.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-price.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-rte.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-loading-overlay.css' | asset_url }}">
 
 {%- style -%}
   .section-{{ section.id }}-padding {
@@ -19,7 +19,7 @@
   }
 {%- endstyle -%}
 
-<link rel="stylesheet" href="{{ 'component-deferred-media.css' | asset_url }}" media="print" onload="this.media='all'">
+<link rel="stylesheet" data-href="{{ 'component-deferred-media.css' | asset_url }}">
 
 {%- assign product = section.settings.product -%}
 
@@ -201,10 +201,10 @@
                             </label>
                           {% elsif product.variants[forloop.index0].metafields.image.swatch == blank and product.variants[forloop.index0].metafields.color.swatch == blank and option.name == "Color" and product.variants[forloop.index0].featured_media.src != blank%}
                             {% if product.variants[forloop.index0].available %}
-                                <label class="swatch-image" for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" style="background: url('{{ product.variants[forloop.index0].featured_media.src | img_url: '75x75' }}') center no-repeat #f6f6f6">
+                                <label class="swatch-image lazybg lazybg2" for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" style="background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=') center no-repeat #f6f6f6" data-style="background: url('{{ product.variants[forloop.index0].featured_media.src | img_url: '75x75' }}') center no-repeat #f6f6f6">
                                 </label> 
                               {% else %}
-                                <label class="swatch-image" for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" style="background: url('{{ product.variants[forloop.index0].featured_media.src | img_url: '75x75' }}') center no-repeat #f6f6f6">
+                                <label class="swatch-image lazybg lazybg2" for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" style="background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=') center no-repeat #f6f6f6" data-style="background: url('{{ product.variants[forloop.index0].featured_media.src | img_url: '75x75' }}') center no-repeat #f6f6f6">
                                   <img class="crossed-out" src="{{ 'soldout.jpg' | asset_url }}" />
                                 </label>
                               {% endif %}
