--- a/sections/main-collection-banner.liquid
+++ b/sections/main-collection-banner.liquid
@@ -1,5 +1,4 @@
-{{ 'component-collection-hero.css' | asset_url | stylesheet_tag }}
-
+<link rel="stylesheet" data-href="{{ 'component-collection-hero.css' | asset_url }}">
 {%- style -%}
   @media screen and (max-width: 749px) {
     .collection-hero--with-image .collection-hero__inner {
