--- a/sections/main-list-collections.liquid
+++ b/sections/main-list-collections.liquid
@@ -1,5 +1,5 @@
-{{ 'component-card.css' | asset_url | stylesheet_tag }}
-{{ 'section-collection-list.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" data-href="{{ 'component-card.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'section-collection-list.css' | asset_url }}">
 
 <div class="page-width">
   <h1 class="title title--primary">{{ section.settings.title | escape }}</h1>
