--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -1,12 +1,12 @@
 {% comment %}theme-check-disable TemplateLength{% endcomment %}
-{{ 'section-main-product.css' | asset_url | stylesheet_tag }}
-{{ 'component-accordion.css' | asset_url | stylesheet_tag }}
-{{ 'component-price.css' | asset_url | stylesheet_tag }}
-{{ 'component-rte.css' | asset_url | stylesheet_tag }}
-{{ 'component-slider.css' | asset_url | stylesheet_tag }}
-{{ 'component-rating.css' | asset_url | stylesheet_tag }}
-{{ 'component-loading-overlay.css' | asset_url | stylesheet_tag }}
-{{ 'component-deferred-media.css' | asset_url | stylesheet_tag }}
+<link rel="stylesheet" data-href="{{ 'section-main-product.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-accordion.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-price.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-rte.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-slider.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-rating.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-loading-overlay.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'component-deferred-media.css' | asset_url }}">
 
 {%- style -%}
   .section-{{ section.id }}-padding {
@@ -352,10 +352,10 @@ margin-top: calc(-{{ section.settings.message_font_size }}px + 4px);
                            {% if  product.variants[forloop.index0].featured_media.src != blank %}
                           	{% if option.name == "Title" or option.name == 'Color' %}
                         		{% if product.variants[forloop.index0].available %}
-                                  <label class="swatch-image" for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" style="background: url('{{ product.variants[forloop.index0].featured_media.src | img_url: '75x75' }}') center no-repeat #f6f6f6">
+                                  <label class="swatch-image lazybg lazybg2" for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" style="background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=') center no-repeat #f6f6f6" data-style="background: url('{{ product.variants[forloop.index0].featured_media.src | img_url: '75x75' }}') center no-repeat #f6f6f6">
                                   </label> 
                                 {% else %}
-                                  <label class="swatch-image" for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" style="background: url('{{ product.variants[forloop.index0].featured_media.src | img_url: '75x75' }}') center no-repeat #f6f6f6">
+                                  <label class="swatch-image lazybg lazybg2" for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" style="background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=') center no-repeat #f6f6f6" data-style="background: url('{{ product.variants[forloop.index0].featured_media.src | img_url: '75x75' }}') center no-repeat #f6f6f6">
                                     <img class="crossed-out" src="{{ 'soldout.jpg' | asset_url }}" />
                                   </label>
                                 {% endif %}
@@ -513,8 +513,7 @@ margin-top: calc(-{{ section.settings.message_font_size }}px + 4px);
               	<a href="/pages/gift-hint" aria-label="Opens form to fill out Send A Hint Form" class="button button--full-width button--secondary">Send a Hint</a>
               {%- endif -%}
               <!-- END: 4/20/22 - adding hint button -->
-
-              {{ 'component-pickup-availability.css' | asset_url | stylesheet_tag }}
+				<link rel="stylesheet" data-href="{{ 'component-pickup-availability.css' | asset_url }}">
 
               {%- assign pick_up_availabilities = product.selected_or_first_available_variant.store_availabilities | where: 'pick_up_enabled', true -%}
 
