--- a/sections/page.liquid
+++ b/sections/page.liquid
@@ -1,5 +1,5 @@
-<link rel="stylesheet" href="{{ 'component-rte.css' | asset_url }}" media="print" onload="this.media='all'">
-<link rel="stylesheet" href="{{ 'section-main-page.css' | asset_url }}" media="print" onload="this.media='all'">
+<link rel="stylesheet" data-href="{{ 'component-rte.css' | asset_url }}">
+<link rel="stylesheet" data-href="{{ 'section-main-page.css' | asset_url }}">
 
 <noscript>{{ 'component-rte.css' | asset_url | stylesheet_tag }}</noscript>
 <noscript>{{ 'section-main-page.css' | asset_url | stylesheet_tag }}</noscript>
@@ -35,7 +35,7 @@
     {%- endunless -%}
     <div class="rte">
       {%- if section.settings.page.content != blank -%}
-        {{ section.settings.page.content }}
+        {{ section.settings.page.content | replace: ' class="" src', ' class="" data-src' }}
       {%- else -%}
         <div class='page-placeholder-wrapper placeholder'>
           {{ 'page' | placeholder_svg_tag: 'page-placeholder' }}
